<resources>
    <string name="app_name">ATM Empresa Consultoria</string>
    <string name="empresa_detalhes">Sobre a Empresa</string>
    <string name="servico_detalhes">Serviços</string>
    <string name="texto_consultoria">Consultoria</string>
    <string name="texto_processos">Processos</string>
    <string name="texto_projetos">Acompanhamento e Projetos</string>
    <string name="nossos_clientes">Nossos Clientes</string>
    <string name="desenvolvimeto_sistemas">Empresa de Desenvolvimento de Sistemas</string>
    <string name="auditoria">Empresa de Auditoria</string>
    <string name="texto_contato">Contato</string>
    <string name="texto_email">Email :</string>
    <string name="texto_telefone">Telefone :</string>
    <string name="texto_celular">Celular :</string>
</resources>
